--- a/src/components/MenuLateral/MenuLateral.css
+++ b/src/components/MenuLateral/MenuLateral.css
@@ -1,20 +1,36 @@
-/* MENU LATERAL*/
-.menulateral {
-    width: 30%;
-    height: 100%;
-    display: block;
-    margin: 1.5rem auto auto auto;
-    font-weight: 500;
-  }
+/* MENU */
+*{
+  margin:0px;
+  padding:0px;
+  font-family: Roboto;
+}
+
+/*.lateralmenu {
+  position: absolute;
+  width: 100%;
+  height: 30%;
+  display: block;
+  margin-top: 1rem;
+}*/
   
-  .button {
-    width: 30%;
-    height: 50%;
-    background: #022939;
-    font-size: 1rem;
-    display: block;
-    margin: 1.5rem auto auto auto;
-    font-weight: 500;
-  }
+.button1 {
+  width: 50%;
+  height: 30%;
+  background: #022939;
+  font-size: 1rem;
+  display: block; 
+  font-weight: 500;
+  transform: rotate(-90deg);
+}
   
+.button2 {
+  width: 30%;
+  height: 50%;
+  background: #42b0db;
+  font-size: 1rem;
+  display: block;
+  margin: 1.5rem auto auto auto;
+  font-weight: 500;
+  transform: rotate(-90deg);
+}
   
