--- a/src/components/MenuLateral/MenuLateral.css
+++ b/src/components/MenuLateral/MenuLateral.css
@@ -5,32 +5,55 @@
   font-family: Roboto;
 }
 
-/*.lateralmenu {
+.img-izq {
+  position: absolute;
+  left: 1.54%;
+  right: 93.48%;
+  width: 65px;
+  top: -44px;
+}
+
+.lateralmenu {
   position: absolute;
   width: 100%;
-  height: 30%;
   display: block;
   margin-top: 1rem;
-}*/
+  justify-items: start; 
+  align-items: stretch; 
+  transform: rotate(360deg);
+}
   
 .button1 {
-  width: 50%;
-  height: 30%;
+  position: absolute;
+  width: 340px;
+  height: 80px;
+  left: -125px;
+  top: 163px;
   background: #022939;
-  font-size: 1rem;
-  display: block; 
-  font-weight: 500;
   transform: rotate(-90deg);
+  color: #FFFFFF;
+  
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 23px;
 }
   
 .button2 {
-  width: 30%;
-  height: 50%;
-  background: #42b0db;
-  font-size: 1rem;
-  display: block;
-  margin: 1.5rem auto auto auto;
-  font-weight: 500;
+  position: absolute;
+  width: 340px;
+  height: 80px;
+  left: -125px;
+  top: 497px;
+  background: #C4C4C4;
   transform: rotate(-90deg);
+  color: #022939;
+
+  font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 23px;
 }
   
