--- a/src/components/MenuLateral/MenuLateral.css
+++ b/src/components/MenuLateral/MenuLateral.css
@@ -1,36 +1,70 @@
-/* MENU */
+/* MENU 
 *{
   margin:0px;
   padding:0px;
   font-family: Roboto;
+  font-weight: 500;
 }
 
-/*.lateralmenu {
+.imgizq {
   position: absolute;
+  left: 1.54%;
+  right: 71.48%;
+  top: 1.69%;
+  bottom: 90.76%;
+  width: 60px; 
+  
+}
+
+.lateralmenu {
+  position: fixed;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 30%;
-  display: block;
+  display: flex;
   margin-top: 1rem;
-}*/
-  
-.button1 {
-  width: 50%;
-  height: 30%;
-  background: #022939;
-  font-size: 1rem;
-  display: block; 
-  font-weight: 500;
+  background-color: beige;
   transform: rotate(-90deg);
+  flex-direction: column;
+
+}
+
+.button1 {
+  display:flex;
+  /*right: 0px;
+  top: 0px;
+  padding:0 10px;*/
+
+
+  /*width: 30%;
+  height: 50%;
+  background: #022939;
+  font-size: 1.5rem;
+  transform: rotate(360deg);
+  justify-content: flex-end;
+  position: absolute;
+  left: 0px;
+  top:88px;
+
 }
   
 .button2 {
+  display:flex;
+  /*right: 0px;
+  top: 0px;
+  padding:0 10px;*/
+
+  /*
   width: 30%;
   height: 50%;
-  background: #42b0db;
-  font-size: 1rem;
-  display: block;
-  margin: 1.5rem auto auto auto;
-  font-weight: 500;
-  transform: rotate(-90deg);
+  background: #5cb7db;
+  font-size: 1.5rem;
+  transform: rotate(360deg);
+  justify-content: flex-end;
+  position: absolute;
+  left: 0px;
+  top:426px;
 }
-  
+ */ 
+
