--- a/src/components/MenuPostres/MenuPostres.css
+++ b/src/components/MenuPostres/MenuPostres.css
@@ -1,11 +1,11 @@
-.contenedorDePostres{
+/*.contenedorDePostres{
     position: absolute;
-    width: 167px;
+    width: 175px;
     height: 198px;
-    left: 136px;
+    left: 316px;
     top: 417px;
     background: #C4C4C4;
-}
+}*/
 table {
     display: table;
     border-collapse: separate;
