--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -29,7 +29,7 @@ body{
   justify-content: center;*/
 
   font-size: calc(10px + 2vmin);
-  color: red;
+  color: #022939;
 }
   
 /*voy a poner la opasidad*/
@@ -41,7 +41,7 @@ body:before {
   top: 0;
   left: 0;
   /*ver la opasidad del figma y copiar aqui los colores*/
-  /*background:linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0.58) 38.02%);*/
+  background:linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0.58) 38.02%);
 
   opacity: 0.7;
   z-index:-1;
