--- a/src/components/MenuMasterEnsaladas/MenuMasterEnsaladas.css
+++ b/src/components/MenuMasterEnsaladas/MenuMasterEnsaladas.css
@@ -76,6 +76,42 @@ table {
      color: #000000;
  }
 
+ .btnMenuTituloDos{
+    width: 164px;
+    height: 50px;
+    top: 419px;
+    background: #8C44AE;
+    border-radius: 10px;
+    border: 1px solid #333333;
+    box-sizing: border-box;
+    border-radius: 10px;
+    align-items: flex-start;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: 0.05em;
+    color: #FFFFFF;
+}
+
+.btnDetalleMenuDos{
+    width: 164px;
+    height: 30px;
+    left: 138px;
+    top: 488px;
+    background: #E3D0D7;
+    border: 1px solid #333333;
+    box-sizing: border-box;
+    border-radius: 10px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    color: #000000;
+}
+
  .agregar{
     
     width: 46px;
@@ -132,7 +168,7 @@ table {
     position: absolute;
     width: 175px;
     height: 198px;
-    left: 316px;
+    left: -189px;
     top: 417px;
     /*background: #C4C4C4;*/
  }
